@@ -4300,6 +4300,8 @@ look_sysfscpu(struct hwloc_topology *topology,
   unsigned caches_added, merge_buggy_core_siblings;
   hwloc_obj_t packages = NULL; /* temporary list of packages before actual insert in the tree */
   int threadwithcoreid = data->is_amd_with_CU ? -1 : 0; /* -1 means we don't know yet if threads have their own coreids within thread_siblings */
+  int dont_merge_die_groups;
+  const char *env;
 
   /* try to get the list of online CPUs at once.
    * otherwise we'll use individual per-CPU "online" files.
@@ -4367,10 +4369,14 @@ look_sysfscpu(struct hwloc_topology *topology,
 
   merge_buggy_core_siblings = (data->arch == HWLOC_LINUX_ARCH_X86);
   caches_added = 0;
+  env = getenv("HWLOC_DONT_MERGE_DIE_GROUPS");
+  dont_merge_die_groups = env && atoi(env);
   hwloc_bitmap_foreach_begin(i, cpuset) {
     hwloc_bitmap_t packageset, coreset, bookset, drawerset, threadset;
     int tmpint;
     int notfirstofcore = 0; /* set if we have core info and if we're not the first PU of our core */
+    int notfirstofdie = 0; /* set if we have die info and if we're not the first PU of our die */
+    hwloc_bitmap_t dieset = NULL;
 
     if (hwloc_filter_check_keep_object_type(topology, HWLOC_OBJ_CORE)) {
       /* look at the core */
@@ -4431,6 +4437,23 @@ look_sysfscpu(struct hwloc_topology *topology,
     }
 
     if (!notfirstofcore /* don't look at the package unless we are the first of the core */
+	&& hwloc_filter_check_keep_object_type(topology, HWLOC_OBJ_GROUP)) {
+      /* look at the die */
+      sprintf(str, "%s/cpu%d/topology/die_cpus", path, i);
+      dieset = hwloc__alloc_read_path_as_cpumask(str, data->root_fd);
+      if (dieset) {
+	hwloc_bitmap_and(dieset, dieset, cpuset);
+	if (hwloc_bitmap_first(dieset) != i) {
+	  /* not first cpu in this die, ignore the die */
+	  hwloc_bitmap_free(dieset);
+	  dieset = NULL;
+	  notfirstofdie = 1;
+	}
+	/* look at packages before deciding whether we keep that die or not */
+      }
+    }
+
+    if (!notfirstofdie /* don't look at the package unless we are the first of the die */
 	&& hwloc_filter_check_keep_object_type(topology, HWLOC_OBJ_PACKAGE)) {
       /* look at the package */
       if (old_filenames)
@@ -4440,6 +4463,11 @@ look_sysfscpu(struct hwloc_topology *topology,
       packageset = hwloc__alloc_read_path_as_cpumask(str, data->root_fd);
       if (packageset) {
 	hwloc_bitmap_and(packageset, packageset, cpuset);
+	if (dieset && hwloc_bitmap_isequal(packageset, dieset)) {
+	  /* die is identical to package, ignore it */
+	  hwloc_bitmap_free(dieset);
+	  dieset = NULL;
+	}
 	if (hwloc_bitmap_first(packageset) == i) {
 	  /* first cpu in this package, add the package */
 	  struct hwloc_obj *package;
@@ -4510,6 +4538,25 @@ look_sysfscpu(struct hwloc_topology *topology,
       package_done:
 	hwloc_bitmap_free(packageset);
       }
+    }
+
+    if (dieset) {
+      struct hwloc_obj *die;
+      unsigned mydieid;
+      mydieid = (unsigned) -1;
+      sprintf(str, "%s/cpu%d/topology/die_id", path, i); /* contains %d when added in 5.2 */
+      if (hwloc_read_path_as_int(str, &tmpint, data->root_fd) == 0)
+	mydieid = (unsigned) tmpint;
+
+      die = hwloc_alloc_setup_object(topology, HWLOC_OBJ_GROUP, mydieid);
+      die->cpuset = dieset;
+      hwloc_debug_1arg_bitmap("os die %u has cpuset %s\n",
+			      mydieid, dieset);
+      die->subtype = strdup("Die");
+      die->attr->group.kind = HWLOC_GROUP_KIND_INTEL_DIE;
+      die->attr->group.subkind = 0;
+      die->attr->group.dont_merge = dont_merge_die_groups;
+      hwloc_insert_object_by_cpuset(topology, die);
     }
 
     if (data->arch == HWLOC_LINUX_ARCH_S390
