@@ -43,9 +43,11 @@ Version 2.1.0
   + Group objects have a new "dont_merge" attribute to prevent them from
     being automatically merged with identical parent or children.
 * Backends
-  + Add support for Linux 5.2 new sysfs cpu topology files.
+  + Add support for Linux 5.2 new sysfs cpu topology files with Die information.
   + Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
-    Tiles, Modules and Dies are exposed as Groups for now.
+  + Tiles, Modules and Dies are exposed as Groups for now.
+    - HWLOC_DONT_MERGE_DIE_GROUPS=1 may be set in the environment to prevent
+      Die groups from being automatically merged with identical parent or children.
   + Improve memory locality on Linux by using HMAT initiators (exposed
     since Linux 5.2+), and NUMA distances for CPU-less NUMA nodes.
   + The x86 now properly handles offline CPUs.
